--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body {
   background-color: #444;
+  border: 2px solid yellow;
+}
+
+#itemChoices {
+  display: inline-block;
+
+}
+
+#itemChoices img {
+  display: inline-block;
+  max-width: 300px;
+  max-height: 300px;
 }
