--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 body {
-  background-color: #444;
-  border: 2px solid yellow;
+  text-align: center;
+  background-color: #ddd;
 }
-
+ h1 {
+   font-size: 48px;
+   font-weight: 600;
+ }
+  p {
+   font-size: 20px;
+ }
 #itemChoices {
   display: inline-block;
 
@@ -29,6 +35,7 @@ button {
   font-size: 20px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
+  cursor: pointer;
 }
 
 button:hover {
