--- a/style.css
+++ b/style.css
@@ -18,10 +18,12 @@ body {
   display: inline-block;
   max-width: 300px;
   max-height: 300px;
-  padding-right: 30px;
+  margin-right: 25px;
+  border: 3px solid black;
+  box-shadow: 3px 3px #000;
 }
 button {
-  background: #3498db;
+  background: #ddd;
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
   background-image: -moz-linear-gradient(top, #3498db, #2980b9);
   background-image: -ms-linear-gradient(top, #3498db, #2980b9);
