--- a/style.css
+++ b/style.css
@@ -22,9 +22,12 @@ body {
   border: 3px solid black;
   box-shadow: 3px 3px #000;
 }
-
+#chartButton {
+  display: none;
+}
 #myChart {
 border: 1px solid black;
+
 }
 button {
   background: #ddd;
