--- a/style.css
+++ b/style.css
@@ -1,16 +1,23 @@
+
+/**{
+  border: 1px solid black;
+}*/
 body {
   text-align: center;
-  background-color: #ddd;
+  /*background-color: rgb(202, 184, 210);*/
+  background-image: url('img/topography.png');
 }
- h1 {
-   font-size: 48px;
-   font-weight: 600;
+ h3 {
+   font-size: 24px;
  }
   p {
    font-size: 20px;
  }
 #itemChoices {
   display: inline-block;
+}
+
+#seattle {
 
 }
 
@@ -25,17 +32,20 @@ body {
 #chartButton {
   display: none;
 }
-#myChart {
-border: 1px solid black;
+#chart canvas{
+text-align: center;
+}
 
+canvas {
+  text-align: center;
 }
 button {
-  background: #ddd;
+  background: #000;
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
   background-image: -moz-linear-gradient(top, #3498db, #2980b9);
   background-image: -ms-linear-gradient(top, #3498db, #2980b9);
   background-image: -o-linear-gradient(top, #3498db, #2980b9);
-  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #000);
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
   border-radius: 28px;
