--- a/style.css
+++ b/style.css
@@ -25,7 +25,33 @@ h1 {
   display: inline-block;
   font-size: 20px;
 }
+@keyframes spin {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+}
+.seattle {
+  cursor: pointer;
+  transform-style: preserve-3d;
+  transform-origin: 0 0;
+}
+.seattle:hover {
+    animation: spin 20s linear infinite;
 
+}
+.rotateButton {
+  cursor: pointer;
+  transform-style: preserve-3d;
+  transform-origin: 5 0;
+}
+.rotateButton:hover {
+    animation: spin 5s linear infinite;
+
+}
 #itemChoices img {
   display: inline-block;
   max-width: 300px;
