--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h1 {
   transform-origin: 0 0;
 }
 .seattle:hover {
-    animation: spin 20s linear infinite;
+    animation: spin 10s linear infinite;
 
 }
 .rotateButton {
@@ -49,7 +49,9 @@ h1 {
   transform-origin: 5 0;
 }
 .rotateButton:hover {
-    animation: spin 5s linear infinite;
+    /*animation: spin 5s linear infinite;*/
+    transform: scale(1.3);
+    box-shadow: inset 0 0 0 10px #000;
 
 }
 #itemChoices img {
